--- a/frontend/locales/pt_BR/LC_MESSAGES/volto.po
+++ b/frontend/locales/pt_BR/LC_MESSAGES/volto.po
@@ -16,3 +16,38 @@ msgstr ""
 "Language-Code: pt-br\n"
 "Language-Name: Português do Brasil\n"
 "Preferred-Encodings: utf-8\n"
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Alignment
+msgid "Alignment"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Item
+msgid "Item"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Label
+msgid "Label"
+msgstr ""
+
+#: components/Blocks/Teaser/TeaserPersonBody
+# defaultMessage: Please choose an existing content as source for this element
+msgid "Please choose an existing content as source for this element"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Size
+msgid "Size"
+msgstr ""
+
+#: components/Sponsors/Sponsors
+# defaultMessage: Sponsors
+msgid "Sponsors"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: URL
+msgid "URL"
+msgstr ""
