--- a/frontend/locales/fr/LC_MESSAGES/volto.po
+++ b/frontend/locales/fr/LC_MESSAGES/volto.po
@@ -25,3 +25,38 @@ msgstr ""
 "Language-Name: French\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "X-Is-Fallback-For: fr-be fr-ca fr-lu fr-mc fr-ch fr-fr\n"
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Alignment
+msgid "Alignment"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Item
+msgid "Item"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Label
+msgid "Label"
+msgstr ""
+
+#: components/Blocks/Teaser/TeaserPersonBody
+# defaultMessage: Please choose an existing content as source for this element
+msgid "Please choose an existing content as source for this element"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Size
+msgid "Size"
+msgstr ""
+
+#: components/Sponsors/Sponsors
+# defaultMessage: Sponsors
+msgid "Sponsors"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: URL
+msgid "URL"
+msgstr ""
