--- a/frontend/locales/ja/LC_MESSAGES/volto.po
+++ b/frontend/locales/ja/LC_MESSAGES/volto.po
@@ -17,3 +17,38 @@ msgstr ""
 "Language-Name: Japanese\n"
 "Preferred-Encodings: utf-8\n"
 "X-Is-Fallback-For: ja-jp\n"
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Alignment
+msgid "Alignment"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Item
+msgid "Item"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Label
+msgid "Label"
+msgstr ""
+
+#: components/Blocks/Teaser/TeaserPersonBody
+# defaultMessage: Please choose an existing content as source for this element
+msgid "Please choose an existing content as source for this element"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: Size
+msgid "Size"
+msgstr ""
+
+#: components/Sponsors/Sponsors
+# defaultMessage: Sponsors
+msgid "Sponsors"
+msgstr ""
+
+#: components/Blocks/CTA/Schema
+# defaultMessage: URL
+msgid "URL"
+msgstr ""
