--- a/frontend/locales/es/LC_MESSAGES/volto.po
+++ b/frontend/locales/es/LC_MESSAGES/volto.po
@@ -26,6 +26,11 @@ msgstr ""
 msgid "Align"
 msgstr ""
 
+#: components/Blocks/HeroImage/schema
+# defaultMessage: Align Icon
+msgid "Align Icon"
+msgstr ""
+
 #: components/Blocks/CTA/Schema
 #: components/Blocks/FixedBackground/Schema
 # defaultMessage: Alignment
@@ -48,6 +53,11 @@ msgstr ""
 msgid "Browse"
 msgstr ""
 
+#: components/Blocks/HeroImage/schema
+# defaultMessage: CTA Icon
+msgid "CTA Icon"
+msgstr ""
+
 #: components/Blocks/Venue/schema
 # defaultMessage: Content
 msgid "Content"
@@ -61,6 +71,11 @@ msgstr ""
 #: components/Blocks/HeroImage/Edit
 # defaultMessage: Description
 msgid "Description"
+msgstr ""
+
+#: components/Blocks/HeroImage/schema
+# defaultMessage: Enter the name of icone from sementic ui library
+msgid "Enter the name of icone from sementic ui library"
 msgstr ""
 
 #: components/Blocks/FixedBackground/Schema
@@ -158,6 +173,11 @@ msgstr ""
 #: components/Blocks/Venue/schema
 # defaultMessage: Title
 msgid "Title"
+msgstr ""
+
+#: components/Blocks/HeroImage/schema
+# defaultMessage: Transform Link to CTA button
+msgid "Transform Link to CTA button"
 msgstr ""
 
 #: components/Blocks/CTA/Schema
