--- a/frontend/locales/pt_BR/LC_MESSAGES/volto.po
+++ b/frontend/locales/pt_BR/LC_MESSAGES/volto.po
@@ -22,6 +22,11 @@ msgstr ""
 msgid "Align"
 msgstr ""
 
+#: components/Blocks/HeroImage/schema
+# defaultMessage: Align Icon
+msgid "Align Icon"
+msgstr ""
+
 #: components/Blocks/CTA/Schema
 #: components/Blocks/FixedBackground/Schema
 # defaultMessage: Alignment
@@ -44,6 +49,11 @@ msgstr ""
 msgid "Browse"
 msgstr ""
 
+#: components/Blocks/HeroImage/schema
+# defaultMessage: CTA Icon
+msgid "CTA Icon"
+msgstr ""
+
 #: components/Blocks/Venue/schema
 # defaultMessage: Content
 msgid "Content"
@@ -57,6 +67,11 @@ msgstr ""
 #: components/Blocks/HeroImage/Edit
 # defaultMessage: Description
 msgid "Description"
+msgstr ""
+
+#: components/Blocks/HeroImage/schema
+# defaultMessage: Enter the name of icone from sementic ui library
+msgid "Enter the name of icone from sementic ui library"
 msgstr ""
 
 #: components/Blocks/FixedBackground/Schema
@@ -154,6 +169,11 @@ msgstr ""
 #: components/Blocks/Venue/schema
 # defaultMessage: Title
 msgid "Title"
+msgstr ""
+
+#: components/Blocks/HeroImage/schema
+# defaultMessage: Transform Link to CTA button
+msgid "Transform Link to CTA button"
 msgstr ""
 
 #: components/Blocks/CTA/Schema
