--- a/frontend/locales/pt/LC_MESSAGES/volto.po
+++ b/frontend/locales/pt/LC_MESSAGES/volto.po
@@ -19,6 +19,11 @@ msgstr ""
 "Language-Name: Portuguese\n"
 "Preferred-Encodings: utf-8\n"
 
+#: components/Blocks/Countdown/Schema
+# defaultMessage: Add aside text
+msgid "Add aside text"
+msgstr ""
+
 #: components/Blocks/Venue/schema
 # defaultMessage: Align
 msgid "Align"
@@ -150,6 +155,11 @@ msgstr ""
 #: components/Sponsors/SponsorLevel
 # defaultMessage: Sponsor
 msgid "Sponsor"
+msgstr ""
+
+#: components/Sponsors/Sponsors
+# defaultMessage: Sponsors
+msgid "Sponsors"
 msgstr ""
 
 #: components/Blocks/HeroImage/Edit
