--- a/frontend/locales/eu/LC_MESSAGES/volto.po
+++ b/frontend/locales/eu/LC_MESSAGES/volto.po
@@ -129,6 +129,11 @@ msgid "Link to"
 msgstr ""
 
 #: components/Blocks/Listing/NewsListingBody
+# defaultMessage: More News
+msgid "More News"
+msgstr ""
+
+#: components/Blocks/Listing/NewsListingBody
 # defaultMessage: News
 msgid "News"
 msgstr ""
