--- a/frontend/locales/de/LC_MESSAGES/volto.po
+++ b/frontend/locales/de/LC_MESSAGES/volto.po
@@ -69,7 +69,7 @@ msgid "CTA Icon"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Coffe Break
 msgid "Coffe Break"
 msgstr ""
 
@@ -89,7 +89,7 @@ msgid "Description"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: End Date
 msgid "End Date"
 msgstr ""
 
@@ -149,12 +149,12 @@ msgid "Link to"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Lunch
 msgid "Lunch"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Misc Event
 msgid "Misc Event"
 msgstr ""
 
@@ -169,7 +169,7 @@ msgid "News"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Party
 msgid "Party"
 msgstr ""
 
@@ -184,12 +184,12 @@ msgid "Register now!"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Registration
 msgid "Registration"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Schedule
 msgid "Schedule"
 msgstr ""
 
@@ -210,7 +210,7 @@ msgid "Sponsors"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Start Date
 msgid "Start Date"
 msgstr ""
 
@@ -225,7 +225,7 @@ msgid "Subtitle"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Talk
 msgid "Talk"
 msgstr ""
 
@@ -247,7 +247,7 @@ msgid "Transform Link to CTA button"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Type of event
 msgid "Type of event"
 msgstr ""
 
