--- a/frontend/locales/ja/LC_MESSAGES/volto.po
+++ b/frontend/locales/ja/LC_MESSAGES/volto.po
@@ -61,7 +61,7 @@ msgid "CTA Icon"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Coffe Break
 msgid "Coffe Break"
 msgstr ""
 
@@ -81,7 +81,7 @@ msgid "Description"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: End Date
 msgid "End Date"
 msgstr ""
 
@@ -141,12 +141,12 @@ msgid "Link to"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Lunch
 msgid "Lunch"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Misc Event
 msgid "Misc Event"
 msgstr ""
 
@@ -161,7 +161,7 @@ msgid "News"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Party
 msgid "Party"
 msgstr ""
 
@@ -176,12 +176,12 @@ msgid "Register now!"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Registration
 msgid "Registration"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Schedule
 msgid "Schedule"
 msgstr ""
 
@@ -202,7 +202,7 @@ msgid "Sponsors"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Start Date
 msgid "Start Date"
 msgstr ""
 
@@ -217,7 +217,7 @@ msgid "Subtitle"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Talk
 msgid "Talk"
 msgstr ""
 
@@ -239,7 +239,7 @@ msgid "Transform Link to CTA button"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Type of event
 msgid "Type of event"
 msgstr ""
 
