--- a/frontend/locales/pt/LC_MESSAGES/volto.po
+++ b/frontend/locales/pt/LC_MESSAGES/volto.po
@@ -62,7 +62,7 @@ msgid "CTA Icon"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Coffe Break
 msgid "Coffe Break"
 msgstr ""
 
@@ -82,7 +82,7 @@ msgid "Description"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: End Date
 msgid "End Date"
 msgstr ""
 
@@ -142,12 +142,12 @@ msgid "Link to"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Lunch
 msgid "Lunch"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Misc Event
 msgid "Misc Event"
 msgstr ""
 
@@ -162,7 +162,7 @@ msgid "News"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Party
 msgid "Party"
 msgstr ""
 
@@ -177,12 +177,12 @@ msgid "Register now!"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Registration
 msgid "Registration"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Schedule
 msgid "Schedule"
 msgstr ""
 
@@ -203,7 +203,7 @@ msgid "Sponsors"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Start Date
 msgid "Start Date"
 msgstr ""
 
@@ -218,7 +218,7 @@ msgid "Subtitle"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Talk
 msgid "Talk"
 msgstr ""
 
@@ -240,7 +240,7 @@ msgid "Transform Link to CTA button"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: undefined
+# defaultMessage: Type of event
 msgid "Type of event"
 msgstr ""
 
