--- a/frontend/locales/it/LC_MESSAGES/volto.po
+++ b/frontend/locales/it/LC_MESSAGES/volto.po
@@ -54,8 +54,8 @@ msgid "CTA Icon"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: Coffe Break
-msgid "Coffe Break"
+# defaultMessage: Coffee Break
+msgid "Coffee Break"
 msgstr ""
 
 #: components/Blocks/Venue/schema
