--- a/frontend/locales/pt_BR/LC_MESSAGES/volto.po
+++ b/frontend/locales/pt_BR/LC_MESSAGES/volto.po
@@ -60,8 +60,8 @@ msgid "CTA Icon"
 msgstr ""
 
 #: components/Blocks/Schedule/Schema
-# defaultMessage: Coffe Break
-msgid "Coffe Break"
+# defaultMessage: Coffee Break
+msgid "Coffee Break"
 msgstr ""
 
 #: components/Blocks/Venue/schema
